--- a/web/app/languages/themes/twentyfourteen-bg_BG.po
+++ b/web/app/languages/themes/twentyfourteen-bg_BG.po
@@ -2,48 +2,60 @@
 # This file is distributed under the same license as the Twenty Fourteen package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2014-03-23 19:41:56+0000\n"
+"PO-Revision-Date: 2014-12-24 10:54:32+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: GlotPress/0.1\n"
+"X-Generator: GlotPress/1.0-alpha-1000\n"
 "Project-Id-Version: Twenty Fourteen\n"
 
-#: inc/customizer.php:102
-msgid "The home page features your choice of up to 6 posts prominently displayed in a grid or slider, controlled by a <a href=\"%1$s\">tag</a>; you can change the tag and layout in <a href=\"%2$s\">Appearance &rarr; Customize</a>. If no posts match the tag, <a href=\"%3$s\">sticky posts</a> will be displayed instead."
-msgstr ""
+#. translators: %s: Name of current post
+#: content-aside.php:48 content-audio.php:48 content-gallery.php:48
+#: content-image.php:48 content-link.php:48 content-quote.php:48
+#: content-video.php:48 content.php:56 inc/template-tags.php:219
+msgid "Continue reading %s <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Продължете да четете %s <span class=\"meta-nav\">&rarr;</span>"
+
+#: inc/customizer.php:31 inc/customizer.php:32
+msgid "May only be visible on wide screens."
+msgstr "Ще се вижда само на широки екрани."
 
 #: inc/widgets.php:59
 msgid "More videos"
-msgstr ""
-
-#: inc/widgets.php:63
-msgid "More audio"
-msgstr ""
+msgstr "Още видеоклипове"
 
 #: inc/widgets.php:67
 msgid "More quotes"
-msgstr ""
+msgstr "Още цитати"
 
 #: inc/widgets.php:71
 msgid "More links"
-msgstr ""
+msgstr "Още връзки"
 
 #: inc/widgets.php:75
 msgid "More galleries"
-msgstr ""
+msgstr "Още галерии"
+
+#. translators: used with More archives link
+#: inc/widgets.php:206
+msgid "%s <span class=\"meta-nav\">&rarr;</span>"
+msgstr "%s <span class=\"meta-nav\">&rarr;</span>"
+
+#: inc/widgets.php:63
+msgid "More audio"
+msgstr "Още аудио"
 
 #: inc/widgets.php:80
 msgid "More asides"
-msgstr ""
+msgstr "Още бележки"
 
-#: inc/widgets.php:206
-msgid "%s <span class=\"meta-nav\">&rarr;</span>"
-msgstr ""
+#: inc/customizer.php:108
+msgid "The home page features your choice of up to 6 posts prominently displayed in a grid or slider, controlled by a <a href=\"%1$s\">tag</a>; you can change the tag and layout in <a href=\"%2$s\">Appearance &rarr; Customize</a>. If no posts match the tag, <a href=\"%3$s\">sticky posts</a> will be displayed instead."
+msgstr "Началната страница може да покаже до 6 избрани публикации в мрежа или слайдер по<a href=\"%1$s\">етикет</a>. Етикетът и вида изглед се променят от <a href=\"%2$s\">Външен вид &rarr; Настройки</a>. Ако няма публикации с този етикет, ще се покажат <a href=\"%3$s\">залепените</a>."
 
-#: inc/customizer.php:37 inc/customizer.php:102 inc/featured-content.php:410
-#: inc/featured-content.php:419 inc/featured-content.php:479
+#: inc/customizer.php:42 inc/customizer.php:108 inc/featured-content.php:405
+#: inc/featured-content.php:414 inc/featured-content.php:474
 msgctxt "featured content default tag slug"
 msgid "featured"
 msgstr "Избрани"
@@ -52,10 +64,11 @@ msgstr "Избрани"
 msgid "Use this widget to list your recent Aside, Quote, Video, Audio, Image, Gallery, and Link posts."
 msgstr "Тази джаджа се използва за показване на последните публикации тип странична, цитат, видео, аудио, снимка, галерия или линк."
 
+#. Theme URI of the plugin/theme
 msgid "http://wordpress.org/themes/twentyfourteen"
 msgstr "http://wordpress.org/themes/twentyfourteen"
 
-#: inc/customizer.php:36 inc/featured-content.php:409
+#: inc/customizer.php:41 inc/featured-content.php:404
 msgid "Use a <a href=\"%1$s\">tag</a> to feature your posts. If no posts match the tag, <a href=\"%2$s\">sticky posts</a> will be displayed instead."
 msgstr "Използвайте <a href=\"%1$s\">етикет</a> за избраните публикации за начална страница. Ако няма публикации с този таг, на начална страница ще излиза <a href=\"%2$s\">залепена публикация</a>"
 
@@ -63,11 +76,11 @@ msgstr "Използвайте <a href=\"%1$s\">етикет</a> за избра
 msgid "Not Found"
 msgstr "Тук няма нищо"
 
-#: inc/customizer.php:31
+#: inc/customizer.php:27
 msgid "Display Site Title &amp; Tagline"
 msgstr "Заглавието и подзаглавието на сайта да са видими"
 
-#: inc/customizer.php:104
+#: inc/customizer.php:110
 msgid "For an in-depth tutorial, and more tips and tricks, visit the <a href=\"%s\">Twenty Fourteen documentation</a>."
 msgstr "За по-подробни инструктии и още хватки и чупки, прегледайте <a href=\"%s\">Документацията на Twenty Fourteen</a>."
 
@@ -81,26 +94,27 @@ msgctxt "yearly archives date format"
 msgid "Y"
 msgstr "Y"
 
-#: inc/customizer.php:28
+#: inc/customizer.php:24
 msgid "Site Title Color"
 msgstr "Цвят на заглавието на сайта"
 
-#: inc/featured-content.php:431
+#: inc/featured-content.php:426
 msgid "Tag Name"
 msgstr "Име на етикета"
 
-#: inc/featured-content.php:436
+#: inc/featured-content.php:431
 msgid "Don&rsquo;t display tag on front end."
 msgstr "Не показвай таг в публичната част. "
 
+#. Description of the plugin/theme
 msgid "In 2014, our default theme lets you create a responsive magazine website with a sleek, modern design. Feature your favorite homepage content in either a grid or a slider. Use the three widget areas to customize your website, and change your content's layout with a full-width page template and a contributor page to show off your authors. Creating a magazine website with WordPress has never been easier."
 msgstr "През 2014-та темата ни по подразбиране ви позволява да създадете адаптивен медиен сайт с красив модерен дизайн. Покажете най-доброто си съдържание на начална страница в мрежа или слайдер. С трите зони за джаджи и допълнителните шаблони можете да настроите сайта си както ви харесва. Имате и специална страница за авторите и съавторите в сайта. Никога не е било по-лесно да създадете медия с WordPress."
 
-#: functions.php:254
+#: functions.php:258
 msgid "Previous"
 msgstr "Предишна"
 
-#: functions.php:255
+#: functions.php:259
 msgid "Next"
 msgstr "Следваща"
 
@@ -123,75 +137,27 @@ msgstr ", "
 msgid "Additional sidebar that appears on the right."
 msgstr "Допълнителна лента вдясно"
 
-#: functions.php:189
-msgid "Footer Widget Area"
-msgstr "Зана за джаджи във футъра"
-
 #: functions.php:191
 msgid "Appears in the footer section of the site."
 msgstr "Появява се в най-долната секция на сайта."
 
-#: functions.php:372
+#: functions.php:376
 msgid "%d Article"
 msgid_plural "%d Articles"
 msgstr[0] "%d Статия"
 msgstr[1] "%d Статии"
 
-#: image.php:65
-msgid "Previous Image"
-msgstr "Предишно изображение"
-
-#: image.php:66
-msgid "Next Image"
-msgstr "Следващо изображение"
-
-#: inc/back-compat.php:37 inc/back-compat.php:47 inc/back-compat.php:60
-msgid "Twenty Fourteen requires at least WordPress version 3.6. You are running version %s. Please upgrade and try again."
-msgstr "Twenty Fourteen изисква WordPress да бъде с версия 3.6 или по-нова. В момента използвате версия %s. Моля обновете и опитайте отново."
-
-#: inc/customizer.php:19 inc/customizer.php:20
-msgid "Background may only be visible on wide screens."
-msgstr "Фонът ще бъде видим само на широки екрани."
-
-#: inc/customizer.php:35 inc/featured-content.php:408
-msgid "Featured Content"
-msgstr "Избрано съдържание"
-
-#: inc/customizer.php:50
-msgid "Layout"
-msgstr "Подредба"
-
-#: inc/customizer.php:54
-msgid "Grid"
-msgstr "Мрежа"
-
-#: inc/customizer.php:55
-msgid "Slider"
-msgstr "Слайдер"
-
-#: inc/customizer.php:103
-msgid "Enhance your site design by using <a href=\"%s\">Featured Images</a> for posts you&rsquo;d like to stand out (also known as post thumbnails). This allows you to associate an image with your post without inserting it. Twenty Fourteen uses featured images for posts and pages&mdash;above the title&mdash;and in the Featured Content area on the home page."
-msgstr "Подобрете дизайна на вашия сайт, като използвате <a href=\"%s\">Картинки към публикациите</a> за съдържанието, върху което искате да акцентирате. Това ви позволява да свържете изображение с вашата публикация без да се налага да го включвате в нея. Twenty Fourteen използва картинките към публикациите както за публикации, така и за страници&mdash;над заглавието&mdash;и в зоната за избрано съдържание на началната страница."
-
-#: inc/template-tags.php:53
+#: inc/template-tags.php:58
 msgid "Posts navigation"
 msgstr "Навигация на публикациите"
 
-#: inc/template-tags.php:84
+#: inc/template-tags.php:89
 msgid "<span class=\"meta-nav\">Published In</span>%title"
 msgstr "<span class=\"meta-nav\">Публикувано в</span>%title"
 
-#: inc/template-tags.php:86
+#: inc/template-tags.php:91
 msgid "<span class=\"meta-nav\">Previous Post</span>%title"
 msgstr "<span class=\"meta-nav\">Предишна</span>%title"
-
-#: inc/template-tags.php:87
-msgid "<span class=\"meta-nav\">Next Post</span>%title"
-msgstr "<span class=\"meta-nav\">Следваща</span>%title"
-
-#: inc/widgets.php:34
-msgid "Twenty Fourteen Ephemera"
-msgstr "Twenty Fourteen Ephemera"
 
 #: inc/widgets.php:62 taxonomy-post_format.php:39
 msgid "Audio"
@@ -211,20 +177,146 @@ msgstr "Заглавие:"
 msgid "Number of posts to show:"
 msgstr "Колко публикации да се показват:"
 
+#. Template Name of the plugin/theme
+msgid "Contributor Page"
+msgstr "Страница с много автори"
+
 #: inc/widgets.php:261
 msgid "Post format to show:"
 msgstr "Кой формат да се показва:"
 
-msgid "Contributor Page"
-msgstr "Страница с много автори"
+#: inc/customizer.php:60
+msgid "Grid"
+msgstr "Мрежа"
+
+#: inc/customizer.php:61
+msgid "Slider"
+msgstr "Слайдер"
+
+#: inc/customizer.php:56
+msgid "Layout"
+msgstr "Подредба"
+
+#: image.php:66
+msgid "Next Image"
+msgstr "Следващо изображение"
+
+#: image.php:65
+msgid "Previous Image"
+msgstr "Предишно изображение"
+
+#: inc/customizer.php:40 inc/featured-content.php:403
+msgid "Featured Content"
+msgstr "Избрано съдържание"
+
+#: inc/widgets.php:34
+msgid "Twenty Fourteen Ephemera"
+msgstr "Twenty Fourteen Ephemera"
+
+#: inc/template-tags.php:92
+msgid "<span class=\"meta-nav\">Next Post</span>%title"
+msgstr "<span class=\"meta-nav\">Следваща</span>%title"
+
+#: inc/back-compat.php:37 inc/back-compat.php:47 inc/back-compat.php:60
+msgid "Twenty Fourteen requires at least WordPress version 3.6. You are running version %s. Please upgrade and try again."
+msgstr "Twenty Fourteen изисква WordPress да бъде с версия 3.6 или по-нова. В момента използвате версия %s. Моля обновете и опитайте отново."
+
+#: inc/customizer.php:34 inc/customizer.php:35
+msgid "Background may only be visible on wide screens."
+msgstr "Фонът ще бъде видим само на широки екрани."
+
+#: inc/customizer.php:109
+msgid "Enhance your site design by using <a href=\"%s\">Featured Images</a> for posts you&rsquo;d like to stand out (also known as post thumbnails). This allows you to associate an image with your post without inserting it. Twenty Fourteen uses featured images for posts and pages&mdash;above the title&mdash;and in the Featured Content area on the home page."
+msgstr "Подобрете дизайна на вашия сайт, като използвате <a href=\"%s\">Картинки към публикациите</a> за съдържанието, върху което искате да акцентирате. Това ви позволява да свържете изображение с вашата публикация без да се налага да го включвате в нея. Twenty Fourteen използва картинките към публикациите както за публикации, така и за страници&mdash;над заглавието&mdash;и в зоната за избрано съдържание на началната страница."
+
+#: functions.php:189
+msgid "Footer Widget Area"
+msgstr "Зoна за джаджи във футъра"
+
+#. #-#-#-#-#  twentyfourteen.pot (Twenty Fourteen 1.3)  #-#-#-#-#
+#. Author URI of the plugin/theme
+#: footer.php:21
+msgid "http://wordpress.org/"
+msgstr "http://bg.wordpress.org/"
+
+#: comments.php:36 comments.php:54
+msgid "Newer Comments &rarr;"
+msgstr "По-нови коментари &rarr;"
+
+#: comments.php:35 comments.php:53
+msgid "&larr; Older Comments"
+msgstr "&larr; По-стари коментари"
+
+#: comments.php:59
+msgid "Comments are closed."
+msgstr "Коментарите са затворени."
 
 #: category.php:20
 msgid "Category Archives: %s"
 msgstr "Архив на категория: %s"
 
+#: comments.php:34 comments.php:52
+msgid "Comment navigation"
+msgstr "Навигация в коментарите"
+
+#: comments.php:27
+msgid "One thought on &ldquo;%2$s&rdquo;"
+msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
+msgstr[0] "Едно мнение по &#8222;%2$s&#8220; "
+msgstr[1] "%1$s мнения по &#8222;%2$s&#8220;"
+
 #: tag.php:22
 msgid "Tag Archives: %s"
 msgstr "Архив за етикет: %s"
+
+#: content-none.php:12
+msgid "Nothing Found"
+msgstr "Нищо не е открито"
+
+#: header.php:48
+msgid "Search"
+msgstr "Търсене"
+
+#: inc/widgets.php:127 inc/widgets.php:172
+msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Има още <span class=\"meta-nav\">&rarr;</span>"
+
+#: content-aside.php:53 content-audio.php:53 content-gallery.php:53
+#: content-image.php:53 content-link.php:53 content-page.php:22
+#: content-quote.php:53 content-video.php:53 content.php:61 image.php:54
+msgid "Pages:"
+msgstr "Страници:"
+
+#: content-aside.php:40 content-audio.php:40 content-gallery.php:40
+#: content-image.php:40 content-link.php:40 content-page.php:28
+#: content-quote.php:40 content-video.php:40 content.php:42 image.php:34
+#: page-templates/contributors.php:35
+msgid "Edit"
+msgstr "Редактиране"
+
+#: inc/template-tags.php:51
+msgid "Next &rarr;"
+msgstr "Следващ &rarr;"
+
+#: inc/template-tags.php:50
+msgid "&larr; Previous"
+msgstr "&larr; Предишен"
+
+#: functions.php:495
+msgid "Page %s"
+msgstr "Страница %s"
+
+#: inc/template-tags.php:85
+msgid "Post navigation"
+msgstr "Навигация в публикациите"
+
+#: header.php:52
+msgid "Primary Menu"
+msgstr "Главно меню"
+
+#: header.php:53
+msgid "Skip to content"
+msgstr "Към съдържанието"
 
 #: archive.php:31
 msgid "Daily Archives: %s"
@@ -242,46 +334,27 @@ msgstr "Архив по години: %s"
 msgid "Archives"
 msgstr "Архив"
 
-#: comments.php:27
-msgid "One thought on &ldquo;%2$s&rdquo;"
-msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
-msgstr[0] "Едно мнение по &#8222;%2$s&#8220; "
-msgstr[1] "%1$s мнения по &#8222;%2$s&#8220;"
-
-#: comments.php:34 comments.php:52
-msgid "Comment navigation"
-msgstr "Навигация в коментарите"
-
-#: comments.php:35 comments.php:53
-msgid "&larr; Older Comments"
-msgstr "&larr; По-стари коментари"
-
-#: comments.php:36 comments.php:54
-msgid "Newer Comments &rarr;"
-msgstr "По-нови коментари &rarr;"
-
-#: comments.php:59
-msgid "Comments are closed."
-msgstr "Коментарите са затворени."
-
-#: content-aside.php:48 content-audio.php:48 content-gallery.php:48
-#: content-image.php:48 content-link.php:48 content-page.php:22
-#: content-quote.php:48 content-video.php:48 content.php:56 image.php:54
-msgid "Pages:"
-msgstr "Страници:"
-
-#: content-aside.php:40 content-audio.php:40 content-gallery.php:40
-#: content-image.php:40 content-link.php:40 content-page.php:28
-#: content-quote.php:40 content-video.php:40 content.php:42 image.php:34
-#: page-templates/contributors.php:35
-msgid "Edit"
-msgstr "Редактиране"
-
 #: content-aside.php:37 content-audio.php:37 content-gallery.php:37
 #: content-image.php:37 content-link.php:37 content-quote.php:37
 #: content-video.php:37 content.php:38 inc/widgets.php:194
 msgid "Leave a comment"
 msgstr "Публикуване на коментар"
+
+#: content-none.php:18
+msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
+msgstr "Време е за първата ви публикация. <a href=\"%1$s\">Започнете от тук</a>."
+
+#: footer.php:21
+msgid "Proudly powered by %s"
+msgstr "Създаден с %s"
+
+#: inc/template-tags.php:109
+msgid "Sticky"
+msgstr "Залепени"
+
+#: search.php:18
+msgid "Search Results for: %s"
+msgstr "Резултати от търсене за: %s"
 
 #: content-aside.php:37 content-audio.php:37 content-gallery.php:37
 #: content-image.php:37 content-link.php:37 content-quote.php:37
@@ -294,20 +367,6 @@ msgstr "1 Коментар"
 #: content-video.php:37 content.php:38 inc/widgets.php:194
 msgid "% Comments"
 msgstr "% Коментари"
-
-#: content-aside.php:46 content-audio.php:46 content-gallery.php:46
-#: content-image.php:46 content-link.php:46 content-quote.php:46
-#: content-video.php:46 content.php:54 inc/widgets.php:127 inc/widgets.php:172
-msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Има още <span class=\"meta-nav\">&rarr;</span>"
-
-#: footer.php:21
-msgid "http://wordpress.org/"
-msgstr "http://bg.wordpress.org/"
-
-#: footer.php:21
-msgid "Proudly powered by %s"
-msgstr "Създаден с %s"
 
 #: functions.php:83
 msgid "Top primary menu"
@@ -334,73 +393,15 @@ msgctxt "Lato font: on or off"
 msgid "on"
 msgstr "off"
 
-#: functions.php:488
-msgid "Page %s"
-msgstr "Страница %s"
+#. Template Name of the plugin/theme
+msgid "Full Width Page"
+msgstr "Страница с пълна ширина"
 
-#: header.php:48
-msgid "Search"
-msgstr "Търсене"
-
-#: header.php:52
-msgid "Primary Menu"
-msgstr "Главно меню"
-
-#: header.php:53
-msgid "Skip to content"
-msgstr "Към съдържанието"
-
-#: inc/template-tags.php:80
-msgid "Post navigation"
-msgstr "Навигация в публикациите"
-
-#: inc/template-tags.php:45
-msgid "&larr; Previous"
-msgstr "&larr; Предишен"
-
-#: inc/template-tags.php:46
-msgid "Next &rarr;"
-msgstr "Следващ &rarr;"
-
-#: inc/template-tags.php:104
-msgid "Sticky"
-msgstr "Залепени"
-
-#: content-none.php:12
-msgid "Nothing Found"
-msgstr "Нищо не е открито"
-
-#: content-none.php:18
-msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "Време е за първата ви публикация. <a href=\"%1$s\">Започнете от тук</a>."
-
-#: content-none.php:22
-msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Няма резултати, отговарящи на вашето търсене. Опитайте отново с други ключови думи. "
-
-#: content-none.php:27
-msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Страницата не съществува. Пробвайте да потърсите каквото ви трябва."
-
-#: inc/widgets.php:58 taxonomy-post_format.php:36
-msgid "Videos"
-msgstr "Видео клипове"
-
-#: inc/widgets.php:54 taxonomy-post_format.php:33
-msgid "Images"
-msgstr "Снимки"
-
-#: inc/widgets.php:55
-msgid "More images"
-msgstr "Още снимки"
-
-#: inc/widgets.php:74 taxonomy-post_format.php:48
-msgid "Galleries"
-msgstr "Галерии"
-
-#: inc/widgets.php:79 taxonomy-post_format.php:30
-msgid "Asides"
-msgstr "Бележки"
+#. #-#-#-#-#  twentyfourteen.pot (Twenty Fourteen 1.3)  #-#-#-#-#
+#. Theme Name of the plugin/theme
+#: inc/customizer.php:105
+msgid "Twenty Fourteen"
+msgstr "Twenty Fourteen"
 
 #: inc/widgets.php:70 taxonomy-post_format.php:45
 msgid "Links"
@@ -410,16 +411,34 @@ msgstr "Връзки"
 msgid "Quotes"
 msgstr "Цитати"
 
-#: search.php:18
-msgid "Search Results for: %s"
-msgstr "Резултати от търсене за: %s"
+#: inc/widgets.php:74 taxonomy-post_format.php:48
+msgid "Galleries"
+msgstr "Галерии"
 
-#: inc/customizer.php:99
-msgid "Twenty Fourteen"
-msgstr "Twenty Fourteen"
+#: inc/widgets.php:58 taxonomy-post_format.php:36
+msgid "Videos"
+msgstr "Видео клипове"
 
+#: inc/widgets.php:79 taxonomy-post_format.php:30
+msgid "Asides"
+msgstr "Бележки"
+
+#: content-none.php:22
+msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
+msgstr "Няма резултати, отговарящи на вашето търсене. Опитайте отново с други ключови думи. "
+
+#: content-none.php:27
+msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
+msgstr "Страницата не съществува. Пробвайте да потърсите каквото ви трябва."
+
+#: inc/widgets.php:54 taxonomy-post_format.php:33
+msgid "Images"
+msgstr "Снимки"
+
+#: inc/widgets.php:55
+msgid "More images"
+msgstr "Още снимки"
+
+#. Author of the plugin/theme
 msgid "the WordPress team"
 msgstr "Екипът на WordPress "
-
-msgid "Full Width Page"
-msgstr "Страница с пълна ширина"
